--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
           <div class="container ">
               <div class="row mt-2  ">
-                <div class="card col-xl-3 m-5 ">
+                <div class="card col-xl-3 col-lg-6 col-sm-12 m-5 ">
                     <img src="https://besthqwallpapers.com/Uploads/18-8-2020/139775/thumb2-great-white-shark-4k-3d-art-monsters-underwater-world.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title text-center">Card title</h5>
@@ -72,7 +72,7 @@
                      </div>
                     </div>
                   </div>
-                  <div class="card col-xl-3 m-5">
+                  <div class="card col-xl-3 col-lg-6 col-sm-12 m-5">
                     <img src="https://coolwallpapers.me/picsup/2637949-hungry-shark-world-4k-wallpaper-screensaver.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title text-center">Card title</h5>
