i add col lg sm 3 card

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="card col-xl-3 m-5">
+                  <div class="card col-xl-3 m-5 col-lg-6 col-sm-12">
                     <img src="https://wallpaper.dog/large/20485377.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title text-center">Card title</h5>
