--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
             <span class="badge bg-dark">#Python</span>
 
         </div>
-        <h3 class="text-center mt-3">IT Academy Osh 2020</h3>
+        <h3 class="text-center mt-3">IT Academy Osh 2020©</h3>
     </footer>
     <hr>
     
